<resources>
    <string name="app_name">Covid19 Voca AI</string>
    <string name="covid19_description">
        The project, Corona Voice Detect, was created for early diagnosis of COVID-19 (Coronavirus). It combines recently developed AI and voice forensic technologies, finding specific patterns in voice, tone and other sounds that we produce as we speak, that relate to unique illnesses and other human factors.
        \n\n
But first we need your help! We need to curate recordings from both healthy individuals and those tested positive for Coronavirus in order to gather enough data for consumer use. Please record your voice daily and reply to a few questions to help us fight this illness! Make your mark and become a part of this historic journey by helping us diagnose and slow the spreading of Coronavirus and bring remote testing to every human in the world at NO EXPENSE!
        \n\n
CLICK BELOW TO ANSWER THE QUESTIONNAIRE &amp; RECORD YOUR VOICE TO HELP US STOP COVID-19.
    </string>
    <string name="project_info">

        Corona Voice Detect, is led by Dr. Shmuel Ur a renowned Israeli inventor and Dr. Alan Bekker, CTO &amp; Co-founder at Voca.ai. The success of this project will have an immense impact on the health of our communities and prevention in spreading.
        \n\n
We’re starting with global data collection. With this data, we will be able to identify and develop technologies to determine the probability of being infected with the virus from voice analysis. The research and development effort is being conducted in collaboration with Professor Rita Singh from Carnegie Mellon University, and other researchers worldwide. Researchers will use this data to study and develop algorithms that will automatically detect COVID-19 and related illnesses from voice. These will potentially serve as rapid tests that can be performed over a phone or computer, and aid in the diagnosis of Coronavirus.

    </string>
    <string name="success_phase">Following the success of the data collection phase, people will soon be able to determine the likelihood of contracting the virus – with just one short voice recording. NOW THAT SOUNDS REMARKABLE!!!</string>
    <string name="made_by">Made with ❤️ By Omer Elimelech</string>
    <string name="omer_tkd_gmail_com">omer.tkd@gmail.com</string>
    <string name="re_record">Tap to Re-record</string>
    <string name="select_option">Select %s</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Gender</item>
    </string-array>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="currently_smoke">I currently smoke</string>
    <string name="used_to_smoke">I used to smoke</string>
    <string name="never_smokeed">I\'ve never smoked</string>
    <string name="Diabetes">Diabetes</string>
    <string name="Hypertension">Hypertension</string>
    <string name="Ischemic_heart">Ischemic heart disease</string>
    <string name="Asthma">Asthma</string>
    <string name="Allergies">Allergies</string>
    <string name="Chronic_lung">Chronic lung disease</string>
    <string name="Chronic_kidney">Chronic kidney disease</string>
    <string name="Seasonal_allergies">Seasonal allergies</string>
    <string name="not_isolated">Not in isolation</string>
    <string name="Hospitalized">Hospitalized</string>
    <string name="isolated_diagnosed">in isolation due to being diagnoed with COVID-19</string>
    <string name="isolated_travel">in isulation due to recent international travel</string>
    <string name="isolated_contant">in isolation due to contant with an individual who was infected with coronavirus or an individual who recently</string>
    <string name="isolated_gov">in isulation due to govenrment regulations</string>
    <string name="_yes">Yes</string>
    <string name="_no">No</string>
    <string name="feel_well">I feel well</string>
    <string name="_fever">I have a fever</string>
    <string name="Dry_cough">Dry cough</string>
    <string name="cougn_sputum">Cough with sputum production</string>
    <string name="Fatigue">Fatigue</string>
    <string name="Muscle_aches">Muscle aches</string>
    <string name="Headache">Headache</string>
    <string name="Sore_throat">Sore throat</string>
    <string name="_sneezing">Sneezing</string>
    <string name="Shortness_of_breath">Shortness of breath</string>
    <string name="Runny_nose_Nasal_congestion">Runny nose or Nasal congestion</string>
    <string name="Itching">Itching (eyes or other)</string>
    <string name="Diarrhea">Diarrhea</string>
    <string name="Nausea_vomit">Nausea and/or vomiting</string>
    <string name="cels">Celsious</string>
    <string name="Fahrenheit">Fahrenheit</string>
    <string name="feet">Feet</string>
    <string name="centitmeters">Centimeters</string>
    <string name="cough3">Please cough three times</string>
    <string name="count1_20">Count from 1 to 20</string>
    <string name="alphabet">Please recite the alphabet:</string>
    <string name="sayEee">Say the vowel \"ee\" for as long as you can : EEEE</string>
    <string name="sayAaa">Say the vowel \"ee\" for as long as you can : AAAA</string>
    <string name="sayOoo">\"Say the vowel \"o\" for as long as you can : OOOO\"</string>
    <string name="abc">A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X, Y, Z</string>
    <string name="empty" />
    <string name="eeeDesc">(as in the word \"cheese\")</string>
    <string name="oooDesc">(as in the word \"box\")</string>
    <string name="aaaDesc">(as in the word \"sad\")</string>
    <string name="select_one_option">Select one option</string>
    <string name="have_diagnosed_conditions">Have you been diagnosed with any of the following conditions?</string>
    <string name="height_in_centimeters">height in centimeters</string>
    <string name="select_country">Select country</string>
    <string name="were_you_diagnosed">Were you diagnosed with COVID-19?</string>
    <string name="smoke">smoke</string>
    <string name="diagnoses">Diagnoses</string>
    <string name="current_status">Current Status</string>
    <string name="sympthoms">Sympthoms</string>
</resources>